fixed a bug in portrait-img on mobile

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -75,6 +75,8 @@ p a {
 
 h1,h2,h3,h4 {
   color:$grey;
+  -moz-hyphens:none;
+  line-height:1;
 }
 
 h1 {
@@ -822,8 +824,7 @@ div.portrait-img {
     img {
       width:100%;
       position:relative;
-      top:100%;
-      margin-top:-200%;
+      margin-top:-30%;
       
       @media screen and (min-width: $medium) {
         top:0;
@@ -903,6 +904,7 @@ $num:length($colorsets);
       $bg_base:nth($colors,3);
       //$grey: fade-out($accent,0.3);
       $grey:tint($accent,0.3);
+      $grey:contrast-color($bg_base, shade($accent, 30%), tint($accent, 30%),50%);
       //$bg_color:#a02035;
       //$bg_base: black;
       //$bg_color:mix($accent,$bg_base,45%);
@@ -1014,7 +1016,8 @@ $num:length($colorsets);
       .category_and_tags,
       .non_priv_groups,
       .tags {
-        color:fade-out($accent,0.5);
+        color:contrast-color($bg_base, shade($type_color,30%), tint($type_color, 30%),50%);
+        //color:fade-out($accent,0.5);
       }
       
       
